third_party/move/move-compiler-v2/tests/more-v1/expansion/duplicate_field_pack.exp

Diagnostics:
error: duplicate declaration, item, or annotation
  ┌─ tests/more-v1/expansion/duplicate_field_pack.move:4:9
  │
4 │         S { f: 0, f: 0 };
  │         ^^^^^^^^^^^^^^^^
  │         │   │     │
  │         │   │     Duplicate argument given for field 'f'
  │         │   Field previously defined here
  │         Invalid construction
